2003-09-23  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_signal.c (gobj_s_signal_new): use #instance_method,
	UnboundMethod#bind and Method#call instead of #__send__.

	* src/rbgobj_signal.c (gobj_s_method_added): check GType.

2003-09-22  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_signal.c (gobj_s_sig_override): check if the class is
	registered.

	* src/rbgobj_signal.c (gobj_s_method_added): when a method named
	'do_<signal_name>' is defined then override default handler by the
	method.

2003-09-20  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_type.c: override #append_features of interface modules to
	prevent including them into classes which is not subclass of
	GLib::Instantiatable.

2003-09-18  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_closure.c: implement GLib::Closure#invalidate.

	* src/rbgobj_closure.c: don't invoke Proc objects after ruby is
	terminated.

	* src/rbgobj_signal.c: implement GLib::MetaInterface#signal_override
	and GLib::Instantiatable#signal_chain_from_overridden experimentaly.

2003-09-06  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbglib.c: define GLib::BINDING_VERSION.

	* src/lib/mkmf-gnome2.rb: use PKG_CONFIG environment variable.

2003-09-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/mkmf_gnome2.rb: Pass "-l$(sitearchdir)" at last of $CFLAGS.

2003-09-03  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_object.c (register_type): if the super type is not defined
	by ruby, then include a new module that defines #initialize.

	* src/rbgobj_param.c (value_validate): use rb_ensure().

	* src/rbgobj_param.c: disable GLib::Param#value_defaults? since the
	name is bad.

2003-08-31  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_enum.c (enum_coerce): use NUM2INT not NUM2UINT.

	* src/rbgobj_paramspecs.c: delete unnecessary StringValue invocation.

	* src/rbgobj_paramspecs.c: use RVAL2GENUM and RVAL2GFLAGS.
